<resources>
    <string name="app_name">AddressBook</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for adding a new contact -->
    <string name="name_string">Name</string>
    <string name="address_string">Address</string>
    <string name="phone_number_string">Phone Number</string>
    <string name="email_string">Email</string>
    <string name="add_string">Add</string>
    <string name="delete_string">Delete</string>
    <string name="edit_string">Edit</string>
    <string name="SomeHint"/>
    <string name="search_hint">Search by name</string>
    <string name="app_label">Address Book</string>
    <string name="confirm_string">Confirm</string>
    <string name="cancel_string">Cancel</string>
</resources>
